fixed index table padding
so text isn't all squished together

--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -149,6 +149,8 @@ li a:hover {
 #button_compare:focus {outline:0;}
 
 
+
+
 /* TABLE */
 #outputTable {
     border: 3px solid #ffca00;
@@ -163,12 +165,15 @@ li a:hover {
 th {
     font-family: RobotoSlab;
     font-size: 40px;
+    padding-right: 50px;
 }
     /* cell */
 td {
     font-family: Roboto_Thin;
     font-size: 18px;
     color: #f7f7f7;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 td:nth-child(1) {
     color: #ffca00;
@@ -181,10 +186,16 @@ tr {
 }
 tr:nth-child(even) {background-color: #46484a}
 
+
+
+
 #map {
         height: 480px;
         width: 100%;
        }
+
+
+
 
 .modal {
     display: none; /* Hidden by default */
